--- a/package.json
+++ b/package.json
@@ -8,23 +8,25 @@
 		"serve": "vite preview"
 	},
 	"dependencies": {
+		"@cloudbase/js-sdk": "^2.9.6-alpha.0",
 		"@element-plus/icons-vue": "^2.3.1",
 		"@wangeditor/editor": "^5.1.23",
 		"@wangeditor/editor-for-vue": "^5.1.12",
-		"axios": "^1.6.3",
+		"axios": "^1.8.4",
 		"countup.js": "^2.8.0",
 		"echarts": "^5.5.0",
 		"echarts-wordcloud": "^2.1.0",
-		"element-plus": "^2.6.3",
+		"element-plus": "^2.9.8",
 		"md-editor-v3": "^2.11.2",
 		"nprogress": "^0.2.0",
-		"pinia": "^2.1.7",
+		"pinia": "^2.3.1",
 		"socket.io-client": "^4.8.1",
 		"vue": "^3.4.5",
 		"vue-cropper": "1.1.1",
 		"vue-echarts": "^6.6.9",
-		"vue-router": "^4.2.5",
+		"vue-router": "^4.5.0",
 		"vue-schart": "^2.0.0",
+		"weixin-js-sdk": "^1.6.5",
 		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
